# managing_tasks

./: .flake8  Readme.md  config.py  docker-compose.yml  pyproject.toml  rebuild.sh
aiohttp_server/: Dockerfile  crud.py  database.py  main.py  pyproject.toml  routes.py
fastapi_app/: Dockerfile  main.py  pyproject.toml
fastapi_app/auth/: crud.py  routes.py  schema.py  security.py  validation.py
fastapi_app/certs/: README.md  private.pem  public.pem
fastapi_app/database/: pg_accessor.py  redis_accessor.py
fastapi_app/tasks/: aiohttp_client.py  make_request.py  routes.py  schema.py
